# app/Http/Controllers/PublisherController.php
@@ -29,13 +29,13 @@ class PublisherController extends Controller
     /**
      * @OA\Post(
      *      tags={"Publisher"},
-     *      path="/editora/cadastro",
+     *      path="/editora/cadastrar",
      *      @OA\Parameter(
      *          name="name",
      *          required=true,
      *      ),
      *      security={{"bearerAuth": {}}},
-     *      @OA\Response(response="200", description="Cadastra as informações do usuário"),
+     *      @OA\Response(response="200", description="Cadastra as informações da Editora"),
      *      @OA\Response(response="401", description="Usuário não Autenticado"),
      *      @OA\Response(response="422", description="Erro em algum campo obrigatório"),
      * )
@@ -48,14 +48,21 @@ class PublisherController extends Controller
     }
 
     /**
-     * Store a newly created resource in storage.
+     * @OA\Get(
+     *     tags={"Publisher"},
+     *     path="/editora/",
+     *     security={{"bearerAuth": {}}},
+     *     @OA\Response(response="200", description="Lista as Edições cadastradas"),
+     *     @OA\Response(response="401", description="Usuário não Autenticado"),
+     * )
      *
-     * @param  \Illuminate\Http\Request  $request
-     * @return \Illuminate\Http\Response
+     * @return App\Models\Publisher
      */
-    public function store(Request $request)
+    public function list()
     {
-        //
+        $publisher = $this->service->list();
+
+        return ['status' => true, 'message' => Geral::EDITORA_ENCONTRADAS, "editora" => $publisher];
     }
 
     /**
